--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.8.3",
     "@astrojs/cloudflare": "^11.0.1",
+    "@astrojs/db": "^0.12.0",
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/node": "^8.3.2",
     "@astrojs/rss": "^4.0.7",
