--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@astrojs/node": "^8.3.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/vue": "^4.5.0",
+    "@types/canvas-confetti": "^1.6.4",
     "astro": "^4.12.2",
-    "typescript": "^5.5.4"
+    "canvas-confetti": "^1.9.3",
+    "typescript": "^5.5.4",
+    "vue": "^3.4.34"
   }
 }
