--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vue": "^4.5.0",
     "@types/canvas-confetti": "^1.6.4",
+    "@types/lodash.debounce": "^4.0.9",
     "astro": "^4.12.2",
     "canvas-confetti": "^1.9.3",
+    "lodash.debounce": "^4.0.8",
     "typescript": "^5.5.4",
     "vue": "^3.4.34"
   }
